# modmail-plugins

./: .gitignore  .pylintrc  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lints.yml
announcement/: announcement.py  info.json
announcement/core/: models.py  views.py
embedmanager/: builder.py  converters.py  embedmanager.py  info.json  utils.py
embedmanager/core/: builder.py  converters.py  data.py  models.py  views.py
ext_utils/: ext_utils.py  info.json
generalinfo/: generalinfo.py  info.json
generalinfo/core/: utils.py
giveaway/: giveaway.py  info.json
giveaway/core/: checks.py  sessions.py  utils.py  views.py
invites/: info.json  invites.py
invites/core/: migration.py  models.py
invites/utils/: timedelta.py  timeutils.py
keepalive/: client.py  info.json  keepalive.py  web_server.py
keepalive/core/: clients.py  web_server.py
logviewer/: .gitignore  info.json  logviewer.py
logviewer/core/: formatter.py  handlers.py  models.py  servers.py  types_ext.py
logviewer/templates/: base.html  error.html  index.html  logbase.html
moderation/: info.json  moderation.py
moderation/core/: config.py  converters.py  errors.py  logging.py  utils.py  vendors.py  views.py
rolemanager/: checks.py  converters.py  info.json  rolemanager.py  utils.py
rolemanager/core/: checks.py  config.py  enums.py  (+5 more)
rtfm/: info.json  rtfm.py
supportutils/: info.json  supportutils.py
trivia/: info.json  trivia.py
utils/: info.json  setup.py  utils.py
(+24 files in other folders)
